<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorBackground"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_view"
            android:textSize="17sp"
            android:textColor="@color/colorPrimaryDark"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="2dp" />

        <EditText
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:textColorHint="@color/hint_text"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/colorPrimaryDark"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="36dp" />


        <EditText
            android:id="@+id/subject_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/subject"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="0dp"
            android:textColor="@color/hint_text"
            android:textColorHint="@color/hint_text"
            tools:layout_editor_absoluteY="126dp" />

        <EditText
            android:id="@+id/message_text"
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:ems="10"
            android:hint="@string/message"

            android:inputType="textMultiLine"
            android:textColor="@color/hint_text"
            android:textColorHint="@color/hint_text"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="206dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right">

            <Button
                android:id="@+id/send_button"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:onClick="onClickButtonSend"
                android:text="@string/send_button"
                tools:layout_editor_absoluteX="147dp"
                tools:layout_editor_absoluteY="438dp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>